--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     networks:
       - prod_net_back
       - prod_net_front
-    #ports:
-    #  - 9998:8080
+    ports:
+      - 9998:8080
     environment:
       - DATABASE_HOST=db
       - DATABASE_PORT=5432
@@ -50,8 +50,8 @@ services:
       - BACKEND_HOST=backend
       - BACKEND_PORT=8080
       - APP_VERSION=build_${BUILD_NUMBER}
-    #depends_on:
-    #  - backend
+    depends_on:
+      - backend
 
 networks:
   prod_net_front:
